...
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        style="@style/UnisonHeaderLabel.Light"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_label"
        style="@style/UnisonEditText.Light"/>


...
