<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="8dp"
    android:background="@color/transparent">

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button_flat_orange_enabled"
        app:srcCompat="@drawable/ic_menu"
        android:elevation="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_toEndOf="@+id/menu_button"
        android:layout_toStartOf="@+id/nav_button"
        android:background="@color/white"
        android:elevation="2dp">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/search_mic"
            android:background="@null"
            android:textColorHint="@color/mid_grey_1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:hint="@string/search"/>

        <ImageButton
            android:id="@+id/search_mic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_mic"
            android:foreground="?attr/selectableItemBackground"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/nav_button"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_button_raised_orange_enabled"
        app:srcCompat="@drawable/ic_direction"
        android:elevation="2dp"/>

</RelativeLayout>