<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <com.one20.unisonui.bars.UnisonSearchNavBar
        android:id="@+id/search_nav"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <com.one20.unisonui.bars.UnisonBottomBar
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>